[package]
name = "tweet-mateix"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.13"
rand = "0.7.2"
dotenv = "0.11"
egg-mode = "0.15"
tokio = { version = "0.2", features = ["full"] }


